# flask-livetw

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: build.md
flask_livetw/: __main__.py  build_app.py  cli.py  config.py  dev_server.py  initialize.py  local_install.py  main.py  util.py
flask_livetw/local_install/: __init__.py  cli.py  command.py
flask_livetw/resources/: dev.py  layout.html  live_reload.js
flask_livetw/static/: dev.py  layout.html  live_reload.js  tailwind.config.js
src/flask_livetw/: __main__.py  build_app.py  cmd_build.py  cmd_dev.py  cmd_init.py  config.py  initialize.py  local_install.py  main.py  util.py
src/flask_livetw/resources/: dev.py
